Add cacheing of Byte values.